[gd_scene load_steps=7 format=3 uid="uid://dfprq3k47wt75"]

[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/menu/items_settings/item_settings.gd" id="1_uaw8x"]
[ext_resource type="Script" path="res://scenes/level_editor/assets/level_editor_menu/items/menu/items_settings/note_settings.gd" id="2_ve8gy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_di6fo"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.286275, 0.294118, 0.352941, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color(0.0745098, 0.0745098, 0.0745098, 0.372549)
shadow_size = 3

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ojflq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rx6d6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rub5a"]

[node name="ItemSettings" type="PanelContainer"]
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.81
theme_override_styles/panel = SubResource("StyleBoxFlat_di6fo")
script = ExtResource("1_uaw8x")

[node name="NoteSettings" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("2_ve8gy")

[node name="Row1" type="HBoxContainer" parent="NoteSettings"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 14

[node name="NoteName" type="HBoxContainer" parent="NoteSettings/Row1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.19
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="NoteSettings/Row1/NoteName"]
layout_mode = 2
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="NoteSettings/Row1/NoteName"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_ojflq")
placeholder_text = "Note"

[node name="NoteDelay" type="HBoxContainer" parent="NoteSettings/Row1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="NoteSettings/Row1/NoteDelay"]
layout_mode = 2
text = "Note Delay:"

[node name="SpinBox" type="SpinBox" parent="NoteSettings/Row1/NoteDelay"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.75
max_value = 10.0
step = 0.125
alignment = 1

[node name="NoteID" type="HBoxContainer" parent="NoteSettings/Row1"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="NoteSettings/Row1/NoteID"]
layout_mode = 2
text = "ID: "

[node name="SpinBox" type="SpinBox" parent="NoteSettings/Row1/NoteID"]
layout_mode = 2

[node name="Row2" type="HBoxContainer" parent="NoteSettings"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="NoteColor" type="ColorPickerButton" parent="NoteSettings/Row2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_rx6d6")
toggle_mode = false
text = "Color"
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="NoteRotated" type="CheckBox" parent="NoteSettings/Row2"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_rub5a")
text = "Rotated"

[node name="SaveNote" type="Button" parent="NoteSettings/Row2"]
layout_mode = 2
size_flags_horizontal = 10
text = "Save Note"

[node name="EventSettings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="MarkerSettings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2

[connection signal="note_settings_changed" from="NoteSettings" to="." method="_on_settings_changed"]
[connection signal="note_settings_saved" from="NoteSettings" to="." method="_on_settings_saved"]
[connection signal="text_changed" from="NoteSettings/Row1/NoteName/LineEdit" to="NoteSettings" method="_on_name_edit"]
[connection signal="value_changed" from="NoteSettings/Row1/NoteDelay/SpinBox" to="NoteSettings" method="_on_delay_value_changed"]
[connection signal="value_changed" from="NoteSettings/Row1/NoteID/SpinBox" to="NoteSettings" method="_on_id_value_changed"]
[connection signal="color_changed" from="NoteSettings/Row2/NoteColor" to="NoteSettings" method="_on_note_color_changed"]
[connection signal="toggled" from="NoteSettings/Row2/NoteRotated" to="NoteSettings" method="_on_note_rotated_toggled"]
[connection signal="pressed" from="NoteSettings/Row2/SaveNote" to="NoteSettings" method="_on_save_note_pressed"]
